Update notebooks to work with latest FLEX updates

--- a/notebooks/Federated CIFAR10 PT example with primitives.ipynb
+++ b/notebooks/Federated CIFAR10 PT example with primitives.ipynb
@@ -66,7 +66,7 @@
     "        root=\".\",\n",
     "        train=False,\n",
     "        download=True,\n",
-    "        transform=cifar_transforms\n",
+    "        transform=None, # Note that we do not specify transforms here, we provide them later in the training process\n",
     ")\n",
     "\n",
     "\n",
@@ -77,7 +77,11 @@
     "flex_dataset = FedDataDistribution.from_config(\n",
     "                        centralized_data=Dataset.from_torchvision_dataset(train_data), \n",
     "                        config=config\n",
-    "                )"
+    "                )\n",
+    "\n",
+    "# Assign test data to server_id\n",
+    "server_id = \"server\"\n",
+    "flex_dataset[server_id] = Dataset.from_torchvision_dataset(test_data)"
    ]
   },
   {
@@ -122,7 +126,7 @@
     "\n",
     "    return server_flex_model\n",
     "\n",
-    "flex_pool = FlexPool.client_server_pool(flex_dataset, init_func=build_server_model)\n",
+    "flex_pool = FlexPool.client_server_pool(flex_dataset, server_id=server_id, init_func=build_server_model)\n",
     "\n",
     "clients = flex_pool.clients\n",
     "servers = flex_pool.servers\n",
@@ -283,7 +287,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`@evaluate_server_model` is a decorator used to test the server model. The function that uses it must have at least one argument, the FlexModel at the server."
+    "`evaluate_global_model` is used to test the server model, quite similar to the `train` function above-described."
    ]
   },
   {
@@ -292,10 +296,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flex.pool import evaluate_server_model\n",
-    "\n",
-    "@evaluate_server_model\n",
-    "def evaluate_global_model(server_flex_model: FlexModel, test_data=None):\n",
+    "def evaluate_global_model(server_flex_model: FlexModel, test_data: Dataset):\n",
     "    model = server_flex_model[\"model\"]\n",
     "    model.eval()\n",
     "    test_loss = 0\n",
@@ -304,7 +305,8 @@
     "    model = model.to(device)\n",
     "    criterion=server_flex_model['criterion']\n",
     "    # get test data as a torchvision object\n",
-    "    test_dataloader = DataLoader(test_data, batch_size=256, shuffle=True, pin_memory=False)\n",
+    "    test_dataset = test_data.to_torchvision_dataset(transform=cifar_transforms)\n",
+    "    test_dataloader = DataLoader(test_dataset, batch_size=256, shuffle=True, pin_memory=False)\n",
     "    losses = []\n",
     "    with torch.no_grad():\n",
     "        for data, target in tqdm(test_dataloader):\n",
@@ -327,7 +329,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "metrics = servers.map(evaluate_global_model, test_data=test_data)\n",
+    "metrics = servers.map(evaluate_global_model)\n",
     "print(metrics[0])"
    ]
   },
@@ -354,7 +356,7 @@
     "    gc.collect()\n",
     "\n",
     "def train_n_rounds(n_rounds, clients_per_round=20):  \n",
-    "    pool = FlexPool.client_server_architecture(fed_dataset=flex_dataset, init_func=build_server_model)\n",
+    "    pool = FlexPool.client_server_pool(fed_dataset=flex_dataset, server_id=server_id, init_func=build_server_model)\n",
     "    for i in range(n_rounds):\n",
     "        print(f\"\\nRunning round: {i+1} of {n_rounds}\")\n",
     "        selected_clients_pool = pool.clients.select(clients_per_round)\n",
@@ -370,7 +372,7 @@
     "        # The aggregator send its aggregated weights to the server\n",
     "        pool.aggregators.map(set_aggregated_diff_weights_pt, pool.servers)\n",
     "        # Optional: evaluate the server model\n",
-    "        metrics = pool.servers.map(evaluate_global_model, test_data=test_data)\n",
+    "        metrics = pool.servers.map(evaluate_global_model)\n",
     "        # Optional: clean-up unused memory\n",
     "        selected_clients.map(clean_up_models)\n",
     "        loss, acc = metrics[0]\n",
@@ -410,7 +412,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.9.16"
   },
   "orig_nbformat": 4,
   "vscode": {
