--- a/notebooks/Federated MNIST PT example with flexible decorators.ipynb
+++ b/notebooks/Federated MNIST PT example with flexible decorators.ipynb
@@ -48,6 +48,10 @@
     "\n",
     "flex_dataset, test_data = load(\"federated_emnist\", return_test=True, split=\"digits\")\n",
     "\n",
+    "# Assign test data to server_id\n",
+    "server_id = \"server\"\n",
+    "flex_dataset[server_id] = test_data\n",
+    "\n",
     "mnist_transforms = transforms.Compose([\n",
     "            transforms.ToTensor(),\n",
     "            transforms.Normalize((0.5,), (0.5,))\n",
@@ -100,7 +104,7 @@
     "    server_flex_model[\"optimizer_kwargs\"] = {}\n",
     "    return server_flex_model\n",
     "\n",
-    "flex_pool = FlexPool.client_server_pool(flex_dataset, init_func=build_server_model)\n",
+    "flex_pool = FlexPool.client_server_pool(flex_dataset, server_id=server_id, init_func=build_server_model)\n",
     "\n",
     "clients = flex_pool.clients\n",
     "servers = flex_pool.servers\n",
@@ -294,10 +298,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flex.pool import evaluate_server_model\n",
-    "\n",
-    "@evaluate_server_model\n",
-    "def evaluate_global_model(server_flex_model: FlexModel, test_data=None):\n",
+    "def evaluate_global_model(server_flex_model: FlexModel, test_data: Dataset):\n",
     "    model = server_flex_model[\"model\"]\n",
     "    model.eval()\n",
     "    test_loss = 0\n",
@@ -322,7 +323,7 @@
     "    test_acc /= total_count\n",
     "    return test_loss, test_acc\n",
     "\n",
-    "metrics = servers.map(evaluate_global_model, test_data=test_data)\n",
+    "metrics = servers.map(evaluate_global_model)\n",
     "print(metrics[0])"
    ]
   },
@@ -343,7 +344,7 @@
    "outputs": [],
    "source": [
     "def train_n_rounds(n_rounds, clients_per_round=20):  \n",
-    "    pool = FlexPool.client_server_pool(fed_dataset=flex_dataset, init_func=build_server_model)\n",
+    "    pool = FlexPool.client_server_pool(fed_dataset=flex_dataset, server_id=server_id, init_func=build_server_model)\n",
     "    for i in range(n_rounds):\n",
     "        print(f\"\\nRunning round: {i+1} of {n_rounds}\")\n",
     "        selected_clients_pool = pool.clients.select(clients_per_round)\n",
@@ -358,7 +359,7 @@
     "        pool.aggregators.map(aggregate_with_fedavg)\n",
     "        # The aggregator send its aggregated weights to the server\n",
     "        pool.aggregators.map(set_agreggated_weights_to_server, pool.servers)\n",
-    "        metrics = pool.servers.map(evaluate_global_model, test_data=test_data)\n",
+    "        metrics = pool.servers.map(evaluate_global_model)\n",
     "        loss, acc = metrics[0]\n",
     "        print(f\"Server: Test acc: {acc:.4f}, test loss: {loss:.4f}\")"
    ]
@@ -396,7 +397,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.9.16"
   },
   "orig_nbformat": 4,
   "vscode": {
