--- a/notebooks/Federated MNIST TF example with simplified primitives.ipynb
+++ b/notebooks/Federated MNIST TF example with simplified primitives.ipynb
@@ -46,7 +46,11 @@
    "source": [
     "from flex.datasets import load\n",
     "\n",
-    "flex_dataset, test_data = load(\"federated_emnist\", return_test=True, split=\"digits\")"
+    "flex_dataset, test_data = load(\"federated_emnist\", return_test=True, split=\"digits\")\n",
+    "\n",
+    "# Assign test data to server_id\n",
+    "server_id = \"server\"\n",
+    "flex_dataset[server_id] = test_data"
    ]
   },
   {
@@ -79,7 +83,7 @@
     "                metrics=['accuracy'])\n",
     "    return model\n",
     "\n",
-    "flex_pool = FlexPool.client_server_pool(fed_dataset=flex_dataset, init_func=init_server_model_tf, model=get_model())\n",
+    "flex_pool = FlexPool.client_server_pool(fed_dataset=flex_dataset, server_id=server_id, init_func=init_server_model_tf, model=get_model())\n",
     "\n",
     "clients = flex_pool.clients\n",
     "server = flex_pool.servers\n",
@@ -176,10 +180,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flex.pool import evaluate_server_model_tf\n",
+    "from flex.pool import evaluate_model_tf\n",
     "\n",
-    "test_examples, test_labels = test_data.to_numpy()\n",
-    "metrics = server.map(evaluate_server_model_tf, test_data=test_examples, test_labels=test_labels)\n",
+    "metrics = server.map(evaluate_model_tf)\n",
     "loss, acc = metrics[0]\n",
     "print(f\"Test acc: {acc:.4f}, test loss: {loss:.4f}\")"
    ]
@@ -201,7 +204,7 @@
    "outputs": [],
    "source": [
     "def train_n_rounds(n_rounds, batch_size, epochs, clients_per_round=20):  \n",
-    "    pool = FlexPool.client_server_pool(fed_dataset=flex_dataset, init_func=init_server_model_tf, model=get_model())\n",
+    "    pool = FlexPool.client_server_pool(fed_dataset=flex_dataset, server_id=server_id, init_func=init_server_model_tf, model=get_model())\n",
     "    for i in range(n_rounds):\n",
     "        print(f\"\\nRunning round: {i+1} of {n_rounds}\")\n",
     "        selected_clients_pool = pool.clients.select(clients_per_round)\n",
@@ -216,7 +219,7 @@
     "        pool.aggregators.map(fed_avg)\n",
     "        # The aggregator send its aggregated weights to the server\n",
     "        pool.aggregators.map(set_aggregated_weights_tf, pool.servers)\n",
-    "        metrics = pool.servers.map(evaluate_server_model_tf, test_data=test_examples, test_labels=test_labels)\n",
+    "        metrics = pool.servers.map(evaluate_model_tf)\n",
     "        loss, acc = metrics[0]\n",
     "        print(f\"Server: Test acc: {acc:.4f}, test loss: {loss:.4f}\")"
    ]
