--- a/notebooks/Federated Text Classification TF example low-level.ipynb
+++ b/notebooks/Federated Text Classification TF example low-level.ipynb
@@ -38,9 +38,7 @@
     "\n",
     "import tensorflow as tf\n",
     "import tensorflow_hub as hub\n",
-    "import tensorflow_datasets as tfds\n",
     "\n",
-    "import matplotlib.pyplot as plt\n",
     "\n",
     "print(\"Version: \", tf.__version__)\n",
     "print(\"Eager mode: \", tf.executing_eagerly())\n",
@@ -72,6 +70,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import tensorflow_datasets as tfds\n",
+    "\n",
     "train_data, test_data = tfds.load(name=\"imdb_reviews\", split=[\"train\", \"test\"])"
    ]
   },
@@ -116,7 +116,11 @@
     "config.n_nodes = 2\n",
     "config.replacement = False # ensure that clients do not share any data\n",
     "config.node_ids = ['client1', 'client2'] # Optional\n",
-    "flex_dataset = FedDataDistribution.from_config(centralized_data=flex_data, config=config)"
+    "flex_dataset = FedDataDistribution.from_config(centralized_data=flex_data, config=config)\n",
+    "\n",
+    "# Assign test data to server_id\n",
+    "server_id = \"server\"\n",
+    "flex_dataset[server_id] = Dataset.from_tfds_text_dataset(test_data, X_columns=['text'], label_columns=['label'])"
    ]
   },
   {
@@ -135,7 +139,10 @@
    "source": [
     "from flex.data import FedDataDistribution\n",
     "\n",
-    "flex_dataset = FedDataDistribution.iid_distribution(flex_data, n_clients=2)"
+    "flex_dataset = FedDataDistribution.iid_distribution(flex_data, n_nodes=2)\n",
+    "# Assign test data to server_id\n",
+    "server_id = \"server\"\n",
+    "flex_dataset[server_id] = Dataset.from_tfds_text_dataset(test_data, X_columns=['text'], label_columns=['label'])"
    ]
   },
   {
@@ -182,7 +189,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def initialize_server_model(server_flex_model, *args):\n",
+    "from flex.model import FlexModel\n",
+    "\n",
+    "def initialize_server_model(server_flex_model: FlexModel, _):\n",
     "    print(\"Initializing server model.\")\n",
     "    model = define_model()\n",
     "    server_flex_model[\"optimizer\"] = deepcopy(model.optimizer)\n",
@@ -199,7 +208,7 @@
    "source": [
     "from flex.pool import FlexPool\n",
     "\n",
-    "flex_pool = FlexPool.client_server_pool(fed_dataset=flex_dataset, init_func=initialize_server_model)\n",
+    "flex_pool = FlexPool.client_server_pool(fed_dataset=flex_dataset, server_id=server_id, init_func=initialize_server_model)\n",
     "clients = flex_pool.clients\n",
     "server = flex_pool.servers\n",
     "print(f\"Server node is indentified by {server.actor_ids}\")\n",
@@ -287,10 +296,9 @@
    "source": [
     "def train(client_model, client_data, batch_size=256, epochs=1):\n",
     "    print(\"Training model at client.\")\n",
-    "    print(client_model)\n",
     "    model = client_model['model']\n",
     "    X_data, y_data = client_data.to_numpy()\n",
-    "    history = model.fit(X_data, y_data, epochs=epochs, batch_size=batch_size, verbose=0)"
+    "    model.fit(X_data, y_data, epochs=epochs, batch_size=batch_size, verbose=0)"
    ]
   },
   {
@@ -336,7 +344,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def collect_weights(aggregator_model, clients_model, **kwargs):\n",
+    "def collect_weights(aggregator_model, clients_model):\n",
     "    print(\"Collecting weights.\")\n",
     "    if 'weights' not in aggregator_model:\n",
     "        aggregator_model['weights'] = []\n",
@@ -428,16 +436,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def evaluate_model(model, data, *args, **kwargs):\n",
-    "    model = model['model']\n",
-    "    if data is not None:\n",
-    "        print(\"Evaluating model at client.\")\n",
-    "        results_local = model.evaluate(kwargs['test_examples'], kwargs['test_labels'], verbose=0)\n",
-    "        print(f\"Results at client on client's data: {results_local}\")\n",
-    "    else:\n",
-    "        print(\"Evaluating model at server\")\n",
-    "    results = model.evaluate(kwargs['test_examples'], kwargs['test_labels'], verbose=0)\n",
-    "    print(f\"Results on test data: {results}\")"
+    "def evaluate_model(flex_model: FlexModel, data: Dataset):\n",
+    "    X_test, y_test = data.to_numpy()\n",
+    "    results = flex_model[\"model\"].evaluate(X_test, y_test, verbose=False)\n",
+    "    print(f\"Results for node_id {flex_model.actor_id} : {results}\")"
    ]
   },
   {
@@ -446,9 +448,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# test_examples, test_labels = test_data\n",
-    "test_examples = Dataset.from_tfds_text_dataset(test_data, X_columns=['text'], label_columns=['label'])\n",
-    "X_test, y_test = test_examples.to_numpy()"
+    "server.map(evaluate_model)"
    ]
   },
   {
@@ -457,16 +457,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "server.map(evaluate_model, test_examples=X_test, test_labels=y_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "clients.map(evaluate_model, test_examples=X_test, test_labels=y_test)"
+    "clients.map(evaluate_model)"
    ]
   },
   {
@@ -486,16 +477,16 @@
    "outputs": [],
    "source": [
     "def train_n_rounds(n_rounds, batch_size, epochs):\n",
-    "    pool = FlexPool.client_server_pool(fed_dataset=flex_dataset, init_func=initialize_server_model)\n",
+    "    pool = FlexPool.client_server_pool(fed_dataset=flex_dataset, server_id=server_id, init_func=initialize_server_model)\n",
     "    pool.servers.map(deploy_model_to_clients, pool.clients)\n",
     "    for i in range(n_rounds):\n",
     "        print(f\"\\nRunning round: {i}\\n\")\n",
     "        pool.clients.map(train, batch_size=batch_size, epochs=epochs)\n",
-    "        pool.clients.map(evaluate_model, test_examples=X_test, test_labels=y_test)\n",
+    "        pool.clients.map(evaluate_model)\n",
     "        pool.aggregators.map(collect_weights, pool.clients)\n",
     "        pool.aggregators.map(aggregate_weights)\n",
     "        pool.servers.map(deploy_global_model_to_clients, pool.clients)\n",
-    "        pool.servers.map(evaluate_model, test_examples=X_test, test_labels=y_test)"
+    "        pool.servers.map(evaluate_model)"
    ]
   },
   {
@@ -533,7 +524,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.9.16"
   },
   "vscode": {
    "interpreter": {
