--- a/notebooks/Federated Text Classification TF with flexible decorators.ipynb
+++ b/notebooks/Federated Text Classification TF with flexible decorators.ipynb
@@ -6,14 +6,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from copy import deepcopy\n",
     "import numpy as np\n",
     "\n",
     "import tensorflow as tf\n",
     "import tensorflow_hub as hub\n",
-    "import tensorflow_datasets as tfds\n",
-    "\n",
-    "import matplotlib.pyplot as plt\n",
     "\n",
     "print(\"Version: \", tf.__version__)\n",
     "print(\"Eager mode: \", tf.executing_eagerly())\n",
@@ -27,6 +23,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import tensorflow_datasets as tfds\n",
+    "\n",
     "train_data, test_data = tfds.load(name=\"imdb_reviews\", split=[\"train\", \"test\"])"
    ]
   },
@@ -64,7 +62,10 @@
    "source": [
     "from flex.data import FedDataDistribution\n",
     "\n",
-    "flex_dataset = FedDataDistribution.iid_distribution(flex_data, n_clients=2)"
+    "flex_dataset = FedDataDistribution.iid_distribution(flex_data, n_nodes=2)\n",
+    "# Assign test data to server_id\n",
+    "server_id = \"server\"\n",
+    "flex_dataset[server_id] = Dataset.from_tfds_text_dataset(test_data, X_columns=['text'], label_columns=['label'])"
    ]
   },
   {
@@ -73,9 +74,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flex.pool.primitives_tf import deploy_server_model_tf\n",
-    "from flex.pool.primitives_tf import evaluate_server_model_tf\n",
-    "\n",
     "from flex.pool.decorators import init_server_model\n",
     "from flex.pool.decorators import collect_clients_weights\n",
     "from flex.pool.decorators import aggregate_weights\n",
@@ -90,10 +88,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from copy import deepcopy\n",
     "# Defining the model\n",
     "@init_server_model\n",
     "def define_model(*args):\n",
-    "    from copy import deepcopy\n",
     "    # model = \"https://tfhub.dev/google/nnlm-en-dim110-with-normalization/2\"\n",
     "    model = \"https://tfhub.dev/google/nnlm-en-dim50/2\"\n",
     "    hub_layer = hub.KerasLayer(model, input_shape=[], dtype=tf.string, trainable=True)\n",
@@ -120,7 +118,7 @@
    "source": [
     "from flex.pool import FlexPool\n",
     "\n",
-    "flex_pool = FlexPool.client_server_pool(fed_dataset=flex_dataset, init_func=define_model)"
+    "flex_pool = FlexPool.client_server_pool(fed_dataset=flex_dataset, server_id=server_id, init_func=define_model)"
    ]
   },
   {
@@ -146,7 +144,7 @@
     "from flex.model import FlexModel\n",
     "\n",
     "@deploy_server_model\n",
-    "def copy_model_to_clients(server_flex_model, *args, **kwargs):\n",
+    "def copy_model_to_clients(server_flex_model):\n",
     "    client_flex_model = FlexModel()\n",
     "    weights = server_flex_model[\"model\"].get_weights()\n",
     "    model = tf.keras.models.clone_model(server_flex_model[\"model\"])\n",
@@ -278,8 +276,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_dataset = Dataset.from_tfds_text_dataset(test_data, X_columns=['text'], label_columns=['label'])\n",
-    "test_examples, test_labels = test_dataset.to_numpy()"
+    "def evaluate_model(flex_model: FlexModel, data: Dataset):\n",
+    "    X_test, y_test = data.to_numpy()\n",
+    "    results = flex_model[\"model\"].evaluate(X_test, y_test, verbose=False)\n",
+    "    print(f\"Results for node_id {flex_model.actor_id} : {results}\")"
    ]
   },
   {
@@ -288,7 +288,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "server.map(evaluate_server_model_tf, test_data=test_examples, test_labels=test_labels)"
+    "server.map(evaluate_model)"
    ]
   },
   {
@@ -297,7 +297,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clients.map(evaluate_server_model_tf, test_data=test_examples, test_labels=test_labels)"
+    "clients.map(evaluate_model)"
    ]
   },
   {
@@ -315,17 +315,17 @@
    "outputs": [],
    "source": [
     "def train_n_rounds(n_rounds, batch_size, epochs):\n",
-    "    pool = FlexPool.client_server_pool(fed_dataset=flex_dataset, init_func=define_model)\n",
-    "    pool.servers.map(copy_model_to_clients, pool.clients, verbose=1)\n",
+    "    pool = FlexPool.client_server_pool(fed_dataset=flex_dataset, server_id=server_id, init_func=define_model)\n",
+    "    pool.servers.map(copy_model_to_clients, pool.clients)\n",
     "    for i in range(n_rounds):\n",
     "        print(f\"\\nRunning round: {i}\\n\")\n",
     "        pool.clients.map(fit_tf, batch_size=batch_size, epochs=epochs)\n",
-    "        pool.clients.map(evaluate_server_model_tf, test_data=test_examples, test_labels=test_labels)\n",
+    "        pool.clients.map(evaluate_model)\n",
     "        pool.aggregators.map(tensorflow_weights_collector, pool.clients)\n",
     "        pool.aggregators.map(fed_avg)\n",
     "        pool.aggregators.map(set_aggregated_weights_tf, pool.servers)\n",
     "        pool.servers.map(copy_model_to_clients, pool.clients)\n",
-    "        print(pool.servers.map(evaluate_server_model_tf, test_data=test_examples, test_labels=test_labels))"
+    "        print(pool.servers.map(evaluate_model))"
    ]
   },
   {
@@ -334,7 +334,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_n_rounds(n_rounds=4, batch_size=512, epochs=10)"
+    "train_n_rounds(n_rounds=2, batch_size=512, epochs=5)"
    ]
   },
   {
@@ -365,7 +365,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.9.16"
   },
   "orig_nbformat": 4
  },
