--- a/notebooks/Federated Text Classification TF with simplified primitives.ipynb
+++ b/notebooks/Federated Text Classification TF with simplified primitives.ipynb
@@ -28,11 +28,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "\n",
     "import tensorflow as tf\n",
     "import tensorflow_hub as hub\n",
-    "import tensorflow_datasets as tfds\n",
     "\n",
     "print(\"Version: \", tf.__version__)\n",
     "print(\"Eager mode: \", tf.executing_eagerly())\n",
@@ -46,6 +43,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import tensorflow_datasets as tfds\n",
+    "\n",
     "train_data, test_data = tfds.load(name=\"imdb_reviews\", split=[\"train\", \"test\"])"
    ]
   },
@@ -83,7 +82,10 @@
    "source": [
     "from flex.data import FedDataDistribution\n",
     "\n",
-    "flex_dataset = FedDataDistribution.iid_distribution(flex_data, n_clients=2)"
+    "flex_dataset = FedDataDistribution.iid_distribution(flex_data, n_nodes=2)\n",
+    "# Assign test data to server_id\n",
+    "server_id = \"server\"\n",
+    "flex_dataset[server_id] = Dataset.from_tfds_text_dataset(test_data, X_columns=['text'], label_columns=['label'])"
    ]
   },
   {
@@ -104,7 +106,7 @@
     "from flex.pool.primitives_tf import collect_clients_weights_tf\n",
     "from flex.pool.primitives_tf import train_tf\n",
     "from flex.pool.primitives_tf import set_aggregated_weights_tf\n",
-    "from flex.pool.primitives_tf import evaluate_server_model_tf\n",
+    "from flex.pool.primitives_tf import evaluate_model_tf\n",
     "from flex.pool.aggregators import fed_avg"
    ]
   },
@@ -146,7 +148,7 @@
    "source": [
     "from flex.pool import FlexPool\n",
     "\n",
-    "flex_pool = FlexPool.client_server_pool(fed_dataset=flex_dataset, init_func=init_server_model_tf, model=define_model())"
+    "flex_pool = FlexPool.client_server_pool(fed_dataset=flex_dataset, server_id=server_id, init_func=init_server_model_tf, model=define_model())"
    ]
   },
   {
@@ -176,7 +178,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clients.map(train_tf, batch_size=512, epochs=1) # , x_dtype=bytes, y_dtype=float)"
+    "clients.map(train_tf, batch_size=512, epochs=1)"
    ]
   },
   {
@@ -230,17 +232,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_dataset = Dataset.from_tfds_text_dataset(test_data, X_columns=['text'], label_columns=['label'])\n",
-    "test_examples, test_labels = test_dataset.to_numpy(x_dtype=bytes, y_dtype=float)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "server.map(evaluate_server_model_tf, test_data=test_examples, test_labels=test_labels)"
+    "server.map(evaluate_model_tf)"
    ]
   },
   {
@@ -257,7 +249,7 @@
    "outputs": [],
    "source": [
     "def train_n_rounds(n_rounds, batch_size, epochs):  \n",
-    "    pool = FlexPool.client_server_pool(fed_dataset=flex_dataset, init_func=init_server_model_tf, model=define_model())\n",
+    "    pool = FlexPool.client_server_pool(fed_dataset=flex_dataset, server_id=server_id, init_func=init_server_model_tf, model=define_model())\n",
     "    pool.servers.map(deploy_server_model_tf, pool.clients)\n",
     "    for i in range(n_rounds):\n",
     "        print(f\"\\nRunning round: {i}\\n\")\n",
@@ -266,7 +258,7 @@
     "        pool.aggregators.map(fed_avg)\n",
     "        pool.aggregators.map(set_aggregated_weights_tf, pool.servers)\n",
     "        pool.servers.map(deploy_server_model_tf, pool.clients)\n",
-    "        pool.servers.map(evaluate_server_model_tf, test_data=test_examples, test_labels=test_labels)"
+    "        print(pool.servers.map(evaluate_model_tf))"
    ]
   },
   {
@@ -310,7 +302,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.9.16"
   },
   "orig_nbformat": 4
  },
