--- a/notebooks/Federating a clustering model.ipynb
+++ b/notebooks/Federating a clustering model.ipynb
@@ -51,7 +51,10 @@
     "train_iris = Dataset.from_numpy(X_train, y_train)\n",
     "test_iris = Dataset.from_numpy(X_test, y_test)\n",
     "\n",
-    "federated_iris = FedDataDistribution.iid_distribution(train_iris, n_clients=5)"
+    "federated_iris = FedDataDistribution.iid_distribution(train_iris, n_nodes=5)\n",
+    "# Assign test data to server_id\n",
+    "server_id = \"server\"\n",
+    "federated_iris[server_id] = test_iris"
    ]
   },
   {
@@ -309,15 +312,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flex.pool import evaluate_server_model\n",
+    "def evaluate_global_model(server_flex_model: FlexModel, test_data: Dataset):\n",
+    "    x, y = test_data.to_numpy()\n",
+    "    preds = server_flex_model[\"model\"].predict(x)\n",
+    "    plot_k_means(server_flex_model[\"model\"], x, title=\"K-means using federated data\")\n",
+    "    score_model(y, preds)\n",
     "\n",
-    "@evaluate_server_model\n",
-    "def evaluate_global_model(server_flex_model: FlexModel, test_data=None):\n",
-    "    preds = server_flex_model[\"model\"].predict(test_data.X_data)\n",
-    "    plot_k_means(server_flex_model[\"model\"], test_data.X_data.to_numpy(), title=\"K-means using federated data\")\n",
-    "    score_model(test_data.y_data, preds)\n",
-    "\n",
-    "servers.map(evaluate_global_model, test_data=test_iris)"
+    "servers.map(evaluate_global_model)"
    ]
   },
   {
@@ -338,7 +339,7 @@
    "source": [
     "n_rounds = 5\n",
     "p = FlexPool.client_server_pool(\n",
-    "    federated_iris, init_func=build_server_model, n_clusters=3\n",
+    "    federated_iris, server_id=server_id, init_func=build_server_model, n_clusters=3\n",
     ")\n",
     "servers = p.servers\n",
     "clients = p.clients\n",
@@ -352,7 +353,7 @@
     "    aggregators.map(set_agreggated_weights_to_server, servers)\n",
     "\n",
     "print(\"Federated model scores\")\n",
-    "servers.map(evaluate_global_model, test_data=test_iris)"
+    "servers.map(evaluate_global_model)"
    ]
   },
   {
@@ -364,9 +365,10 @@
    "outputs": [],
    "source": [
     "print(\"Centralized model scores\")\n",
-    "preds = centralized_model.predict(test_iris.X_data)\n",
-    "score_model(test_iris.y_data, preds)\n",
-    "plot_k_means(centralized_model, test_iris.X_data.to_numpy(), title=\"K-means using centralized data\")"
+    "x, y = test_iris.to_numpy()\n",
+    "preds = centralized_model.predict(x)\n",
+    "score_model(y, preds)\n",
+    "plot_k_means(centralized_model, x, title=\"K-means using centralized data\")"
    ]
   },
   {
@@ -393,7 +395,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.16"
   },
   "vscode": {
    "interpreter": {
