--- a/notebooks/Federating a linear regression model.ipynb
+++ b/notebooks/Federating a linear regression model.ipynb
@@ -54,7 +54,11 @@
     "train_diabetes = Dataset.from_numpy(X_train, y_train)\n",
     "test_diabetes = Dataset.from_numpy(X_test, y_test)\n",
     "\n",
-    "federated_diabetes = FedDataDistribution.iid_distribution(train_diabetes, n_clients=5)"
+    "federated_diabetes = FedDataDistribution.iid_distribution(train_diabetes, n_nodes=5)\n",
+    "\n",
+    "# Assign test data to server_id\n",
+    "server_id = \"server\"\n",
+    "federated_diabetes[server_id] = test_diabetes"
    ]
   },
   {
@@ -146,7 +150,7 @@
     "    return flex_model\n",
     "\n",
     "\n",
-    "p = FlexPool.client_server_pool(federated_diabetes, init_func=build_server_model)\n",
+    "p = FlexPool.client_server_pool(federated_diabetes, server_id=server_id, init_func=build_server_model)\n",
     "\n",
     "clients = p.clients\n",
     "servers = p.servers\n",
@@ -295,15 +299,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flex.pool import evaluate_server_model\n",
-    "\n",
-    "@evaluate_server_model\n",
-    "def evaluate_global_model(server_flex_model: FlexModel, test_data=None):\n",
+    "def evaluate_global_model(server_flex_model: FlexModel, test_data: Dataset):\n",
     "    preds = server_flex_model[\"model\"].predict(test_data.X_data)\n",
     "    plot_lm(server_flex_model[\"model\"], test_data, title=\"K-means using federated data\")\n",
     "    score_model(test_data.y_data, preds)\n",
     "\n",
-    "servers.map(evaluate_global_model, test_data=test_diabetes)"
+    "servers.map(evaluate_global_model)"
    ]
   },
   {
@@ -323,7 +324,7 @@
    "outputs": [],
    "source": [
     "n_rounds = 1\n",
-    "p = FlexPool.client_server_pool(federated_diabetes, init_func=build_server_model)\n",
+    "p = FlexPool.client_server_pool(federated_diabetes, server_id=server_id, init_func=build_server_model)\n",
     "servers = p.servers\n",
     "clients = p.clients\n",
     "aggregators = p.aggregators\n",
@@ -336,7 +337,7 @@
     "    aggregators.map(set_agreggated_weights_to_server, servers)\n",
     "\n",
     "print(\"Federated model scores\")\n",
-    "servers.map(evaluate_global_model, test_data=test_diabetes)"
+    "servers.map(evaluate_global_model)"
    ]
   },
   {
@@ -370,7 +371,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.9.16"
   },
   "vscode": {
    "interpreter": {
