--- a/notebooks/Federated MNIST TF example with flexible decorators.ipynb
+++ b/notebooks/Federated MNIST TF example with flexible decorators.ipynb
@@ -44,7 +44,11 @@
    "source": [
     "from flex.datasets import load\n",
     "\n",
-    "flex_dataset, test_data = load(\"federated_emnist\", return_test=True, split=\"digits\")"
+    "flex_dataset, test_data = load(\"federated_emnist\", return_test=True, split=\"digits\")\n",
+    "\n",
+    "# Assign test data to server_id\n",
+    "server_id = \"server\"\n",
+    "flex_dataset[server_id] = test_data"
    ]
   },
   {
@@ -86,7 +90,7 @@
     "\n",
     "    return server_flex_model\n",
     "\n",
-    "flex_pool = FlexPool.client_server_pool(flex_dataset, init_func=build_server_model)\n",
+    "flex_pool = FlexPool.client_server_pool(flex_dataset, server_id=server_id, init_func=build_server_model)\n",
     "\n",
     "clients = flex_pool.clients\n",
     "servers = flex_pool.servers\n",
@@ -272,14 +276,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flex.pool import evaluate_server_model\n",
-    "\n",
-    "@evaluate_server_model\n",
-    "def evaluate_global_model(server_flex_model: FlexModel, test_data=None):\n",
+    "def evaluate_global_model(server_flex_model: FlexModel, test_data: Dataset):\n",
     "    X, y = test_data.to_numpy()\n",
     "    return server_flex_model[\"model\"].evaluate(X, y, verbose=False)\n",
     "\n",
-    "metrics = servers.map(evaluate_global_model, test_data=test_data)\n",
+    "metrics = servers.map(evaluate_global_model)\n",
     "print(metrics[0])"
    ]
   },
@@ -300,7 +301,7 @@
    "outputs": [],
    "source": [
     "def train_n_rounds(n_rounds, clients_per_round=20):  \n",
-    "    pool = FlexPool.client_server_pool(fed_dataset=flex_dataset, init_func=build_server_model)\n",
+    "    pool = FlexPool.client_server_pool(fed_dataset=flex_dataset, server_id=server_id, init_func=build_server_model)\n",
     "    for i in range(n_rounds):\n",
     "        print(f\"\\nRunning round: {i+1} of {n_rounds}\")\n",
     "        selected_clients_pool = pool.clients.select(clients_per_round)\n",
@@ -315,7 +316,7 @@
     "        pool.aggregators.map(aggregate_with_fedavg)\n",
     "        # The aggregator send its aggregated weights to the server\n",
     "        pool.aggregators.map(set_agreggated_weights_to_server, pool.servers)\n",
-    "        metrics = pool.servers.map(evaluate_global_model, test_data=test_data)\n",
+    "        metrics = pool.servers.map(evaluate_global_model)\n",
     "        loss, acc = metrics[0]\n",
     "        print(f\"Server: Test acc: {acc:.4f}, test loss: {loss:.4f}\")"
    ]
@@ -353,7 +354,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.9.16"
   },
   "orig_nbformat": 4,
   "vscode": {
