--- a/notebooks/Federated Text Classifcation PT using Hugginface dataset and trainer.ipynb
+++ b/notebooks/Federated Text Classifcation PT using Hugginface dataset and trainer.ipynb
@@ -33,14 +33,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from copy import deepcopy\n",
-    "import numpy as np\n",
-    "\n",
-    "from datasets.load import load_dataset\n",
     "import torch\n",
     "from transformers import AutoModelForSequenceClassification, AutoTokenizer\n",
     "\n",
-    "TRANSFORMER_MODEL = \"distilbert-base-uncased\""
+    "TRANSFORMER_MODEL = \"distilbert-base-uncased\"\n",
+    "device = (\n",
+    "    \"cuda\"\n",
+    "    if torch.cuda.is_available()\n",
+    "    else \"mps\"\n",
+    "    if torch.backends.mps.is_available()\n",
+    "    else \"cpu\"\n",
+    ")"
    ]
   },
   {
@@ -59,6 +62,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from datasets.load import load_dataset\n",
+    "\n",
     "ag_news_dataset = load_dataset('imdb', split=['train', 'test']) # Get the dataset from huggingface library"
    ]
   },
@@ -104,13 +109,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flex.data import FedDatasetConfig, FedDataDistribution\n",
+    "from flex.data import Dataset, FedDatasetConfig, FedDataDistribution\n",
     "\n",
     "config = FedDatasetConfig(seed=0)\n",
     "config.n_nodes = 2\n",
     "config.replacement = False # ensure that clients do not share any data\n",
     "config.node_ids = ['client1', 'client2'] # Optional\n",
-    "flex_dataset = FedDataDistribution.from_config_with_huggingface_dataset(data=train_examples, config=config, X_columns=['text'], label_columns=['label'])"
+    "flex_dataset = FedDataDistribution.from_config_with_huggingface_dataset(data=train_examples, config=config, X_columns=['text'], label_columns=['label'])\n",
+    "# Assign test data to server_id\n",
+    "server_id = \"server\"\n",
+    "flex_dataset[server_id] = Dataset.from_huggingface_dataset(test_examples, X_columns=['text'], label_columns=['label'])"
    ]
   },
   {
@@ -140,22 +148,16 @@
     "from flex.model import FlexModel\n",
     "\n",
     "from flex.pool.decorators import init_server_model\n",
-    "from flex.pool.decorators import deploy_server_model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from flex.pool.decorators import deploy_server_model\n",
+    "\n",
     "@init_server_model\n",
     "def define_model(*args):\n",
     "    flex_model = FlexModel()\n",
     "    tokenizer = AutoTokenizer.from_pretrained(TRANSFORMER_MODEL)\n",
     "    model =  AutoModelForSequenceClassification.from_pretrained(TRANSFORMER_MODEL, num_labels=2)\n",
-    "    flex_model['model'] = model\n",
-    "    flex_model['tokenizer'] = tokenizer\n",
+    "    flex_model['model'] = model.to(device)\n",
+    "    flex_model['tokenizer_f'] = lambda texts: tokenizer(texts, padding=\"max_length\", truncation=True)\n",
+    "\n",
     "    return flex_model"
    ]
   },
@@ -167,7 +169,7 @@
    "source": [
     "from flex.pool import FlexPool\n",
     "\n",
-    "flex_pool = FlexPool.client_server_pool(fed_dataset=flex_dataset, init_func=define_model)"
+    "flex_pool = FlexPool.client_server_pool(fed_dataset=flex_dataset, server_id=server_id, init_func=define_model)"
    ]
   },
   {
@@ -260,11 +262,8 @@
     "from transformers import Trainer, TrainingArguments\n",
     "\n",
     "\n",
-    "def tokenize_function(texts, tokenizer):\n",
-    "    return tokenizer(texts, padding=\"max_length\", truncation=True)\n",
-    "\n",
-    "def train_pt(client_flex_model: FlexModel, client_data: Dataset, tokenize_func):\n",
-    "    X_data = tokenize_func(client_data.X_data.tolist(), client_flex_model['tokenizer'])\n",
+    "def train_pt(client_flex_model: FlexModel, client_data: Dataset):\n",
+    "    X_data = client_flex_model['tokenizer_f'](client_data.X_data.tolist())\n",
     "    imdb_dataset = IMDbDataset(X_data, client_data.y_data)\n",
     "    training_args = TrainingArguments(\n",
     "        output_dir='./results',          # output directory\n",
@@ -272,16 +271,16 @@
     "        per_device_train_batch_size=16,  # batch size per device during training\n",
     "        per_device_eval_batch_size=64,   # batch size for evaluation\n",
     "        warmup_steps=500,                # number of warmup steps for learning rate scheduler\n",
-    "        use_mps_device=True,\n",
+    "        use_mps_device=True if device == \"mps\" else False,\n",
     "    )\n",
     "    trainer = Trainer(\n",
-    "        model=client_flex_model['model'],                         # the instantiated 🤗 Transformers model to be trained\n",
-    "        args=training_args,                  # training arguments, defined above\n",
+    "        model=client_flex_model['model'],   # the instantiated 🤗 Transformers model to be trained\n",
+    "        args=training_args,                 # training arguments, defined above\n",
     "        train_dataset=imdb_dataset,         # training dataset\n",
     "    )\n",
     "    trainer.train()\n",
     "\n",
-    "clients.map(train_pt, tokenize_func=tokenize_function)"
+    "clients.map(train_pt)"
    ]
   },
   {
@@ -360,12 +359,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flex.pool import evaluate_server_model\n",
     "import evaluate\n",
     "\n",
-    "def eval_loop(model, eval_dataloader, device, metric):\n",
+    "def evaluate_global_model(server_flex_model: FlexModel, test_data: Dataset):\n",
+    "    X_data = server_flex_model['tokenizer_f'](test_data.X_data.tolist()[:100]) # Using subset, for testing purposes.\n",
+    "    imdb_dataset = IMDbDataset(X_data, test_data.y_data[:100]) # Using subset, for testing purposes.\n",
+    "    metric = evaluate.load(\"accuracy\")\n",
+    "    imdb_dataloader = DataLoader(imdb_dataset, batch_size=1, shuffle=False)\n",
+    "    model = server_flex_model[\"model\"].to(device)\n",
     "    model.eval()\n",
-    "    for batch in eval_dataloader:\n",
+    "    for batch in imdb_dataloader:\n",
     "        batch = {k: v.to(device) for k, v in batch.items()}\n",
     "        with torch.no_grad():\n",
     "            outputs = model(**batch)\n",
@@ -375,17 +378,8 @@
     "        metric.add_batch(predictions=predictions, references=batch[\"labels\"])\n",
     "    print(f\"Results: {metric.compute()}\")\n",
     "\n",
-    "@evaluate_server_model\n",
-    "def evaluate_global_model(server_flex_model: FlexModel, test_data=None, tokenize_func=None, eval_func=None):\n",
-    "    X_data = tokenize_func(test_data.X_data.tolist()[:100], server_flex_model['tokenizer']) # Using subset, for testing purposes.\n",
-    "    imdb_dataset = IMDbDataset(X_data, test_data.y_data[:100]) # Using subset, for testing purposes.\n",
-    "    metric = evaluate.load(\"accuracy\")\n",
-    "    device = torch.device('cuda') if torch.cuda.is_available() else torch.device('cpu')\n",
-    "    imdb_dataloader = DataLoader(imdb_dataset, batch_size=1, shuffle=False)\n",
-    "    eval_func(server_flex_model['model'], imdb_dataloader, device, metric)\n",
     "\n",
-    "test_data = Dataset.from_huggingface_dataset(test_examples, X_columns='text', label_columns='label')\n",
-    "server.map(evaluate_global_model, test_data=test_data, tokenize_func=tokenize_function, eval_func=eval_loop)"
+    "server.map(evaluate_global_model)"
    ]
   },
   {
@@ -405,7 +399,7 @@
    "outputs": [],
    "source": [
     "def train_n_rounds(n_rounds, clients_per_round=2):\n",
-    "    pool = FlexPool.client_server_pool(fed_dataset=flex_dataset, init_func=define_model)\n",
+    "    pool = FlexPool.client_server_pool(fed_dataset=flex_dataset, server_id=server_id, init_func=define_model)\n",
     "    for i in range(n_rounds):\n",
     "        print(f\"\\nRunning round: {i+1} of {n_rounds+1}\")\n",
     "        selected_clients_pool = pool.clients.select(clients_per_round)\n",
@@ -414,14 +408,14 @@
     "        # Deploy the server model to the selected clients\n",
     "        pool.servers.map(copy_server_model_to_clients, selected_clients)\n",
     "        # Each selected client trains her model\n",
-    "        selected_clients.map(train_pt, tokenize_func=tokenize_function)\n",
+    "        selected_clients.map(train_pt)\n",
     "        # The aggregador collects weights from the selected clients and aggregates them\n",
     "        pool.aggregators.map(collect_clients_weights_pt, selected_clients)\n",
     "        # Apply FedAvg aggregator\n",
     "        pool.aggregators.map(fed_avg)\n",
     "        # The aggregator send its aggregated weights to the server\n",
     "        pool.aggregators.map(set_aggregated_weights_pt, pool.servers)\n",
-    "        pool.servers.map(evaluate_global_model, test_data=test_data, tokenize_func=tokenize_function, eval_func=eval_loop)"
+    "        pool.servers.map(evaluate_global_model)"
    ]
   },
   {
@@ -459,7 +453,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.9.16"
   },
   "orig_nbformat": 4
  },
